assets/css/all-project-colors.css
/* Dark */
@media (prefers-color-scheme: dark) {
    .Zurn-Elkay-Primary-Background{
        background-color: #60BBD8;
    }
    .Hocus-Focus-Primary-Background{
        background-color: #8B7FB1;
    }
    .Vorne-Primary-Background{
        background-color: #6B97DE;
    }
    .Solemates-Primary-Background{
        background-color: #E799B3;
    }
    .Nuts-For-Reading-Primary-Color{
        background-color: #FF9900;
    }
    .Zurn-Elkay-Primary-Color{
        background-color: #60BBD8;
    }
    .Hocus-Focus-Primary-Color{
        background-color: #8B7FB1;
    }
    .Vorne-Primary-Color{
        background-color: #6B97DE;
    }
    .Solemates-Primary-Color{
        background-color: #E799B3;
    }
    .Nuts-For-Reading-Primary-Color{
        background-color: #FF9900;
    }
}
    

/* Light */
@media (prefers-color-scheme: light) {
    .Zurn-Elkay-Primary-Background{
        background-color: #165C7D;
    }
    .Hocus-Focus-Primary-Background{
        background-color: #5F508B;
    }
    .Vorne-Primary-Background{
        background-color: #4170BC;
    }
    .Solemates-Primary-Background{
        background-color: #C35686;
    }
    .Nuts-For-Reading-Primary-Background{
        background-color: #EB7100;
    }
    .Zurn-Elkay-Primary-Color{
        color: #165C7D;
    }
    .Hocus-Focus-Primary-Color{
        color: #5F508B;
    }
    .Vorne-Primary-Color{
        color: #4170BC;
    }
    .Solemates-Primary-Color{
        color: #C35686;
    }
    .Nuts-For-Reading-Primary-Color{
        color: #F07300;
    }
}

